# rom

./: .gitignore  Cargo.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: rust.yml
cognos/: Cargo.toml
cognos/src/: aterm.rs  internal_json.rs  lib.rs  state.rs
cognos/src/internal/: json.rs  mod.rs
crates/cognos/: Cargo.toml
crates/cognos/src/: aterm.rs  lib.rs  state.rs
crates/cognos/src/internal/: mod.rs
crates/rom-cli/: Cargo.toml
crates/rom-cli/src/: cli.rs  lib.rs
crates/rom-cli/tests/: cli.rs
crates/rom-core/: Cargo.toml
crates/rom-core/src/: cache.rs  debug_log.rs  display.rs  error.rs  icons.rs  lib.rs  monitor.rs  state.rs  term.rs  types.rs  update.rs
crates/rom-core/tests/: cache.rs  display.rs  golden.rs  monitor.rs  state.rs  types.rs
docs/: FORMATS.md  README.md
nix/: package.nix  shell.nix
rom/: Cargo.toml
rom/src/: cache.rs  cli.rs  display.rs  lib.rs  main.rs  monitor.rs  state.rs  types.rs  update.rs
rom/tests/: cli_missing_expr.rs
