[workspace]
members  = [ "cognos", "rom" ]
resolver = "3"

[workspace.package]
name = "rom"
version = "0.1.0"
edition = "2024"
authors = ["NotAShelf <raf@notashelf.dev>"]
description = "Pretty build graphs for Nix builds"
license = "MPL-2.0"
repository = "https://github.com/notashelf/rom"
homepage = "https://github.com/notashelf/rom"
rust-version = "1.85"
readme = true

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
crossterm = "0.29.0"
ratatui = "0.29.0"
indexmap = { version = "2.11.4", features = ["serde"] }
csv = "1.3.1"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
eyre = "0.6.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
