[workspace]
members = ["cognos", "rom"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["NotAShelf <raf@notashelf.dev>"]
description = "Pretty build graphs for Nix builds"
rust-version = "1.91.1"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
crossterm = "0.29.0"
ratatui = "0.29.0"
indexmap = { version = "2.12.0", features = ["serde"] }
csv = "1.4.0"
chrono = "0.4.42"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
eyre = "0.6.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
