[package]
name = "rom"
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rom"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rom-core = { path = "../crates/rom-core" }
rom-cli = { path = "../crates/rom-cli" }
eyre.workspace = true
