[package]
name = "rom-core"
description = "Core monitoring library for ROM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cognos.workspace = true

serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
